<resources>
    <string name="app_name">My baby</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="type_your_name_textview">Представьтесь, пожалуйста</string>
    <string name="your_name">Ваше имя</string>
    <string name="next">Далее</string>
    <string name="not_enterred_name">Вы не ввели имя</string>

    <string name="hello">Здравствуйте!</string>
    <string name="type_baby_name">Введите имя малыша</string>
    <string name="baby_name">Имя малыша</string>
    <string name="baby_birth">День рождение малыша</string>

    <string name="name_empty">Введите имя</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_data">Проверьте данные</string>
    <string name="check_you_name">Ваше имя:</string>
    <string name="check_baby_name">Имя малыша:</string>
    <string name="check_baby_birth">День рождения малыша:</string>
    <string name="back">Назад</string>


</resources>
